
icon:plus[] Monitoring: New metrics for caching statistics have been added. Take a look at the link:{{< relref "monitoring.asciidoc" >}}#metrics[documentation] for the new metrics.

icon:check[] OrientDB: The included OrientDB version has been updated to version 3.0.24

[[v1.0.2]]
== 1.0.2 (11.10.2019)

icon:check[] Core: The internal memory usage has been reduced.

[[v1.0.1]]
== 1.0.1 (08.10.2019)

icon:check[] UI: The UI has been updated to version link:https://github.com/gentics/mesh-ui/blob/develop/CHANGELOG.md#101---2019-10-08[1.0.1]

icon:plus[] Core: Link resolving now supports branches. Take a look at the link:{{< relref "features.asciidoc" >}}#linkresolvingbranches[documentation] for more information. link:https://github.com/gentics/mesh-incubator/issues/38[#38]

[[v1.0.0]]
== 1.0.0 (03.10.2019)

icon:bullhorn[] New UI

[quote]
____

This version of Gentics Mesh contains the a new UI which is accessible via `/mesh-ui`. The old UI is still part of this release and can be accessed via `/mesh-ui-v1`.

The following noteworthy aspects of the UI have been updated / altered:

* The permission management has been reworked
* The new schema editor which features autocompletion
* The usability of the edit view has been enhanced
* The editor for HTML fields has been replaced
* A new image editor has been added which now supports focal point handling
* Language handling has been improved
* The UI no longer depends on Elasticsearch
____

icon:bullhorn[] New defaults

[quote]
____

For new server installations (`mesh-server`) the Elasticsearch embedded server will no longer be enabled by default. The demo server (`mesh-demo`) will still start the embedded Elasticsearch server for ease of use.
It is still possible to enable the embedded server via the `search.startEmbedded: true` and `search.url: http://localhost:9200` settings in the `mesh.yml` file.
____

